--- a/templates/create.html
+++ b/templates/create.html
@@ -17,7 +17,7 @@
                     <div class="card-body">
                         <h3 class="text-center mb-4">Create New Account</h3>
                         
-                        <form action="{{ url_for('create_user') }}" method="POST">
+                        <form action="{{ url_for('create') }}" method="POST">
                             <div class="mb-3">
                                 <label class="form-label">Username</label>
                                 <input type="text" name="username" class="form-control" placeholder="Choose a unique username" required>
